--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -104,14 +104,14 @@ task(version) doLast {
 dependencies {
     implementation fileTree(dir: 'libs', include: '*.jar')
 
-    implementation project (':android-iconify')
+    implementation project(':android-iconify')
     // Note that we have the Font Awesome TTF file
     // in the local assets as well, to enable the
     // graphical layout editor to render it. Since
     // that is what will be compiled in the APK now,
     // we need to ensure that it's updated along
     // with module updates.
-    implementation project (':android-iconify-fontawesome')
+    implementation project(':android-iconify-fontawesome')
 
     implementation "androidx.appcompat:appcompat:$androidXVersion"
     implementation "androidx.recyclerview:recyclerview:$androidXVersion"
@@ -119,7 +119,7 @@ dependencies {
     implementation "com.google.android.material:material:1.0.0"
     // For the optional Nullable annotation
     implementation "androidx.annotation:annotation:$androidXVersion"
-
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     // NOTE: Always update the version of google-services and firebase libraries using the ones
     // provided in this link: https://developers.google.com/android/guides/releases
     implementation "com.google.android.gms:play-services-plus:16.0.0"
@@ -132,6 +132,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-perf:17.0.2'
     // Firebase remote config
     implementation 'com.google.firebase:firebase-config:16.5.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     // Add the In-App Messaging dependency:
     implementation('com.google.firebase:firebase-inappmessaging-display:17.2.0') {
@@ -169,10 +170,10 @@ dependencies {
      * latest version as a result of dynamic version
      * definitions in the transitive dependencies.
      */
-    implementation ('com.squareup.retrofit2:retrofit:2.8.1') {
+    implementation('com.squareup.retrofit2:retrofit:2.8.1') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
-    implementation ('com.squareup.retrofit2:converter-gson:2.8.1') {
+    implementation('com.squareup.retrofit2:converter-gson:2.8.1') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
         exclude group: 'com.google.code.gson', module: 'gson'
     }
@@ -181,7 +182,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.0.0'
     implementation 'uk.co.chrisjenx:calligraphy:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation ('com.github.bumptech.glide:okhttp3-integration:4.11.0')
+    implementation('com.github.bumptech.glide:okhttp3-integration:4.11.0')
 
     // Segment Library
     implementation 'com.segment.analytics.android:analytics:4.2.6'
@@ -192,6 +193,12 @@ dependencies {
         exclude module: 'play-services-analytics'
         transitive = true
     }
+    //adding Room ORM for Database
+    // database
+    implementation 'android.arch.persistence.room:rxjava2:2.4.1'
+   // annotationProcessor 'android.arch.persistence.room:compiler:2.4.1'
+/*    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'*/
 
     // Crashlytics Kit
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
@@ -201,7 +208,7 @@ dependencies {
     // Branch SDK
     // Check this link for guide to updating Branch integration:
     // https://github.com/BranchMetrics/android-branch-deep-linking
-    implementation ('io.branch.sdk.android:library:2.19.2') {
+    implementation('io.branch.sdk.android:library:2.19.2') {
         exclude module: 'answers-shim'
     }
 
@@ -210,7 +217,7 @@ dependencies {
 
     // test project configuration
     testImplementation 'junit:junit:4.12'
-    testImplementation ("org.mockito:mockito-core:2.19.0"){
+    testImplementation("org.mockito:mockito-core:2.19.0") {
         exclude group: 'org.hamcrest'
     }
     testImplementation "org.robolectric:robolectric:4.3.1"
@@ -223,17 +230,17 @@ dependencies {
      * Instead of AssertJ we should move towards Truth library that they recommend instead.
      * Ref: https://truth.dev/comparison.html
      */
-    testImplementation ('com.squareup.assertj:assertj-android:1.1.1') {
+    testImplementation('com.squareup.assertj:assertj-android:1.1.1') {
         exclude group: 'com.android.support'
     }
-    testImplementation ('com.squareup.assertj:assertj-android-support-v4:1.1.1') {
+    testImplementation('com.squareup.assertj:assertj-android-support-v4:1.1.1') {
         exclude group: 'com.android.support'
     }
-    testImplementation ('com.squareup.assertj:assertj-android-appcompat-v7:1.1.1') {
+    testImplementation('com.squareup.assertj:assertj-android-appcompat-v7:1.1.1') {
         exclude group: 'com.android.support'
     }
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.12.8'
-    testImplementation ('com.squareup.retrofit2:retrofit-mock:2.8.1') {
+    testImplementation('com.squareup.retrofit2:retrofit-mock:2.8.1') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
 
@@ -243,7 +250,7 @@ dependencies {
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.12.1'
-    androidTestImplementation ('org.mockito:mockito-core:2.8.9'){
+    androidTestImplementation('org.mockito:mockito-core:2.8.9') {
         exclude group: 'org.hamcrest'
     }
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${KOTLIN_VERSION}"
@@ -379,7 +386,7 @@ android {
             if (null == facebookAppId) {
                 throw new GradleException("You must set FACEBOOK_APP_ID if FACEBOOK is enabled")
             }
-            fbLoginProtocolScheme = "fb"+facebookAppId
+            fbLoginProtocolScheme = "fb" + facebookAppId
         }
 
         manifestPlaceholders = [supportsRtl          : "false",
@@ -456,12 +463,14 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
-            pseudoLocalesEnabled true // Set device language to "en_XA" to test glyphs, or "ar_XB" to test RTL support
-            manifestPlaceholders = [ supportsRtl:"true"]
+            pseudoLocalesEnabled true
+            // Set device language to "en_XA" to test glyphs, or "ar_XB" to test RTL support
+            manifestPlaceholders = [supportsRtl: "true"]
         }
         debuggable.initWith(buildTypes.debug)
         debuggable {
-            testCoverageEnabled = false // Set to "false" to work around debugger issue: https://code.google.com/p/android/issues/detail?id=123771
+            testCoverageEnabled = false
+            // Set to "false" to work around debugger issue: https://code.google.com/p/android/issues/detail?id=123771
             matchingFallbacks = ["debug"]
         }
 
@@ -473,7 +482,7 @@ android {
             applicationVariants.all { variant ->
                 variant.outputs.all { output ->
                     project.ext { appName = 'edx' }
-                    outputFileName  = "${project.ext.appName}-${variant.buildType.name}-${versionName}.apk"
+                    outputFileName = "${project.ext.appName}-${variant.buildType.name}-${versionName}.apk"
                 }
             }
         }
@@ -489,9 +498,9 @@ android {
         exclude 'META-INF/NOTICE.txt'
     }
     testOptions {
-         unitTests.all {
-             maxHeapSize '1g'
-         }
+        unitTests.all {
+            maxHeapSize '1g'
+        }
     }
 
     compileOptions {
