--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -253,15 +253,25 @@ dependencies {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
 
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+    androidTestImplementation ('com.squareup.retrofit2:retrofit-mock:2.9.0') {
+        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
+    }
+
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'com.linkedin.dexmaker:dexmaker-mockito:2.12.1'
-    androidTestImplementation ('org.mockito:mockito-core:2.8.9'){
+    androidTestImplementation('org.mockito:mockito-core:2.8.9') {
         exclude group: 'org.hamcrest'
     }
+
+    androidTestImplementation 'org.robolectric:robolectric:4.7.3'
+    androidTestImplementation "com.github.nimbl3:robolectric.shadows-supportv4:4.1-SNAPSHOT"
+    androidTestImplementation "org.robolectric:shadows-multidex:4.0.1"
+    androidTestImplementation 'org.assertj:assertj-core:2.5.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${KOTLIN_VERSION}"
     implementation "com.android.billingclient:billing-ktx:$kotlin_version_billing"
 
@@ -286,11 +296,6 @@ dependencies {
     // For local unit tests
     testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     kaptTest "com.google.dagger:hilt-compiler:$hilt_version"
-}
-
-configurations {
-    androidTestImplementation.exclude group: 'javax.inject'
-    androidTestImplementation.exclude group: 'javax.annotation'
 }
 
 def config = new TaskHelper().loadConfig(project)
@@ -361,7 +366,7 @@ android {
             }
         }
 
-        testInstrumentationRunner "org.edx.mobile.test.EdXTestRunner"
+        testInstrumentationRunner "org.edx.mobile.base.EdXTestRunner"
 
         testHandleProfiling true
         testFunctionalTest true
@@ -458,12 +463,12 @@ android {
         }
         // Shared directory of both unit and instrumentation to use common base classes.
         String sharedTestDir = 'src/sharedTest/java'
-        test {
-            java.srcDirs += sharedTestDir
-        }
         androidTest {
             java.srcDirs += sharedTestDir
         }
+//        test {
+//            java.srcDirs += sharedTestDir
+//        }
     }
 
     lintOptions {
