--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
     <!-- Setup for Code Coverage -->
     <instrumentation
-        android:name="org.edx.mobile.instrumentation.EdxInstrumentation"
+        android:name="org.edx.mobile.base.HiltEdxTestApplication_Application"
         android:targetPackage="org.edx.mobile" />
 
     <!-- Required for Youtube package visibility on Android 11 or higher devices -->
@@ -41,15 +41,20 @@
         <package android:name="com.google.android.youtube" />
     </queries>
 
+    <!-- set requestLegacyExternalStorage to true, allow the external storage permission -->
+    <!-- required by the facebook screenshot test library to create the screenshot on Android 6.0 -->
+    <!-- and above. -->
+    <!-- ref: https://github.com/facebook/screenshot-tests-for-android/issues/162#issuecomment-528282299   -->
     <application
         android:name=".base.RuntimeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        tools:replace="android:supportsRtl"
-        android:supportsRtl="${supportsRtl}"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
+        android:supportsRtl="${supportsRtl}"
         android:theme="@style/AppTheme"
+        tools:replace="android:supportsRtl"
         tools:targetApi="n">
 
         <activity
