--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -226,7 +226,7 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     // To mock static classes
     testImplementation 'org.mockito:mockito-inline:3.4.0'
-    testImplementation ("org.mockito:mockito-core:2.19.0"){
+    testImplementation ("org.mockito:mockito-android:4.6.1"){
         exclude group: 'org.hamcrest'
     }
     testImplementation "org.robolectric:robolectric:4.7.3"
@@ -263,7 +263,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation('org.mockito:mockito-core:2.8.9') {
+    androidTestImplementation('org.mockito:mockito-android:4.6.1') {
         exclude group: 'org.hamcrest'
     }
 
