--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -168,10 +168,10 @@ dependencies {
      * latest version as a result of dynamic version
      * definitions in the transitive dependencies.
      */
-    implementation ('com.squareup.retrofit2:retrofit:2.9.0') {
+    implementation('com.squareup.retrofit2:retrofit:2.9.0') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
-    implementation ('com.squareup.retrofit2:converter-gson:2.9.0') {
+    implementation('com.squareup.retrofit2:converter-gson:2.9.0') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
         exclude group: 'com.google.code.gson', module: 'gson'
     }
@@ -179,7 +179,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'de.hdodenhof:circleimageview:2.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation ('com.github.bumptech.glide:okhttp3-integration:4.11.0')
+    implementation('com.github.bumptech.glide:okhttp3-integration:4.11.0')
 
     // Segment Library
     implementation 'com.segment.analytics.android:analytics:4.7.0'
@@ -192,7 +192,7 @@ dependencies {
     }
 
     // Firebase Crashlytics SDK
-    implementation ('com.google.firebase:firebase-crashlytics:17.2.2'){
+    implementation('com.google.firebase:firebase-crashlytics:17.2.2') {
         exclude group: 'javax.inject'
         transitive = true
     }
@@ -203,7 +203,7 @@ dependencies {
     // Branch SDK
     // Check this link for guide to updating Branch integration:
     // https://github.com/BranchMetrics/android-branch-deep-linking
-    implementation ('io.branch.sdk.android:library:2.19.2') {
+    implementation('io.branch.sdk.android:library:2.19.2') {
         exclude module: 'answers-shim'
     }
 
@@ -226,7 +226,7 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     // To mock static classes
     testImplementation 'org.mockito:mockito-inline:3.4.0'
-    testImplementation ("org.mockito:mockito-android:4.6.1"){
+    testImplementation("org.mockito:mockito-android:4.6.1") {
         exclude group: 'org.hamcrest'
     }
     testImplementation "org.robolectric:robolectric:4.7.3"
@@ -239,22 +239,22 @@ dependencies {
      * Instead of AssertJ we should move towards Truth library that they recommend instead.
      * Ref: https://truth.dev/comparison.html
      */
-    testImplementation ('com.squareup.assertj:assertj-android:1.1.1') {
+    testImplementation('com.squareup.assertj:assertj-android:1.1.1') {
         exclude group: 'com.android.support'
     }
-    testImplementation ('com.squareup.assertj:assertj-android-support-v4:1.1.1') {
+    testImplementation('com.squareup.assertj:assertj-android-support-v4:1.1.1') {
         exclude group: 'com.android.support'
     }
-    testImplementation ('com.squareup.assertj:assertj-android-appcompat-v7:1.1.1') {
+    testImplementation('com.squareup.assertj:assertj-android-appcompat-v7:1.1.1') {
         exclude group: 'com.android.support'
     }
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
-    testImplementation ('com.squareup.retrofit2:retrofit-mock:2.9.0') {
+    testImplementation('com.squareup.retrofit2:retrofit-mock:2.9.0') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
 
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
-    androidTestImplementation ('com.squareup.retrofit2:retrofit-mock:2.9.0') {
+    androidTestImplementation('com.squareup.retrofit2:retrofit-mock:2.9.0') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
 
@@ -409,7 +409,7 @@ android {
             if (null == facebookAppId) {
                 throw new GradleException("You must set FACEBOOK_APP_ID if FACEBOOK is enabled")
             }
-            fbLoginProtocolScheme = "fb"+facebookAppId
+            fbLoginProtocolScheme = "fb" + facebookAppId
         }
 
         manifestPlaceholders = [supportsRtl          : "true",
@@ -493,11 +493,13 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
-            pseudoLocalesEnabled true // Set device language to "en_XA" to test glyphs, or "ar_XB" to test RTL support
+            pseudoLocalesEnabled true
+            // Set device language to "en_XA" to test glyphs, or "ar_XB" to test RTL support
         }
         debuggable.initWith(buildTypes.debug)
         debuggable {
-            testCoverageEnabled = false // Set to "false" to work around debugger issue: https://code.google.com/p/android/issues/detail?id=123771
+            testCoverageEnabled = false
+            // Set to "false" to work around debugger issue: https://code.google.com/p/android/issues/detail?id=123771
             matchingFallbacks = ["debug"]
         }
 
@@ -509,7 +511,7 @@ android {
             applicationVariants.all { variant ->
                 variant.outputs.all { output ->
                     project.ext { appName = 'edx' }
-                    outputFileName  = "${project.ext.appName}-${variant.buildType.name}-${versionName}.apk"
+                    outputFileName = "${project.ext.appName}-${variant.buildType.name}-${versionName}.apk"
                 }
             }
         }
@@ -525,9 +527,9 @@ android {
         exclude 'META-INF/NOTICE.txt'
     }
     testOptions {
-         unitTests.all {
-             maxHeapSize '1g'
-         }
+        unitTests.all {
+            maxHeapSize '1g'
+        }
     }
 
     compileOptions {
@@ -539,6 +541,11 @@ android {
         jvmTarget = "11"
     }
 }
+
+hilt {
+    enableTransformForLocalTests = true
+}
+
 
 android.applicationVariants.all { variant ->
     def variantName = variant.name.capitalize()
