--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -208,6 +208,7 @@ dependencies {
     }
     implementation "com.google.android.gms:play-services-ads-identifier:18.0.1"
     implementation "com.android.installreferrer:installreferrer:2.2"
+    implementation "androidx.browser:browser:1.3.0"
 
     //New Relic Integration
     implementation "com.newrelic.agent.android:android-agent:$newrelic_version"
