--- a/.github/workflows/automationTestSuit.yml
+++ b/.github/workflows/automationTestSuit.yml
@@ -18,3 +18,14 @@ jobs:
       - name: Clone edx-app-test repository
         run: |
           git clone https://github.com/openedx/edx-app-test.git
+
+      - name: Run E2E
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          profile: Nexus 4
+          api-level: 21
+          arch: x86
+          target: google_apis
+          disable-animations: true
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
