--- a/.github/workflows/automationTestSuit.yml
+++ b/.github/workflows/automationTestSuit.yml
@@ -29,3 +29,5 @@ jobs:
           disable-animations: true
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          script: |
+            ./gradlew verifyProdDebuggable -PdisablePreDex
