feat: test emulator

--- a/.github/workflows/automationTestSuit.yml
+++ b/.github/workflows/automationTestSuit.yml
@@ -28,6 +28,5 @@ jobs:
           target: google_apis
           disable-animations: true
           force-avd-creation: false
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           script: |
-            ./gradlew verifyProdDebuggable -PdisablePreDex
+            ./gradlew assembleProdDebuggable
