--- a/.github/workflows/automationTestSuit.yml
+++ b/.github/workflows/automationTestSuit.yml
@@ -29,4 +29,4 @@ jobs:
           disable-animations: true
           force-avd-creation: false
           script: |
-            ./gradlew assembleProdDebuggable
+            ./gradlew connectedCheck
