feat: test remove dex library

--- a/.github/workflows/automationTestSuit.yml
+++ b/.github/workflows/automationTestSuit.yml
@@ -36,3 +36,4 @@ jobs:
           force-avd-creation: false
           script: |
             echo "test emulator"
+            ./gradlew connectedCheck
