feat: test install libraries

--- a/.github/workflows/automationTestSuit.yml
+++ b/.github/workflows/automationTestSuit.yml
@@ -37,3 +37,8 @@ jobs:
           script: |
             echo "test emulator"
             ./gradlew connectedCheck
+
+      - name: move to edx-app-test
+        run: |
+          cd $GITHUB_WORKSPACE/edx-app-test
+          pip3 install -r requirements.txt
