--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -147,7 +147,7 @@ dependencies {
     implementation "androidx.mediarouter:mediarouter:$androidXVersion"
     implementation 'com.google.android.gms:play-services-cast-framework:16.2.0'
 
-    implementation 'com.facebook.android:facebook-login:11.1.1'
+    implementation 'com.facebook.android:facebook-login:latest.release'
     implementation 'com.microsoft.identity.client:msal:0.3+'
     implementation 'commons-lang:commons-lang:2.6'
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -397,11 +397,10 @@ android {
             }
         }
 
-        def facebookAppId = ""
         def fbLoginProtocolScheme = ""
         def facebook = config.get('FACEBOOK')
         if (facebook?.get('ENABLED')) {
-            facebookAppId = facebook.get('FACEBOOK_APP_ID')
+            def facebookAppId = facebook.get('FACEBOOK_APP_ID')
             if (null == facebookAppId) {
                 throw new GradleException("You must set FACEBOOK_APP_ID if FACEBOOK is enabled")
             }
@@ -412,7 +411,6 @@ android {
                                 firebaseEnabled      : firebaseEnabled ?: false,
                                 fcmEnabled           : fcmEnabled,
                                 branchKey            : branchKey,
-                                facebookAppId        : facebookAppId,
                                 microsoftSignature   : microsoftSignature,
                                 fbLoginProtocolScheme: fbLoginProtocolScheme,
                                 sdCardEnabled        : config.get('DOWNLOAD_TO_SD_CARD_ENABLED') ?: true]
