temp: address PR comments

--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -80,7 +80,7 @@ def getVersionName = { ->
     catch (e) {
         logger.error("Could not determine version name", e)
     }
-    return "3.2.2"
+    return description.substring(description.indexOf("/") + 1).split("-")[0].trim()
 }
 
 /**
