feat: Update facebookLoginSdk library (#1736)
feat: Update facebookLoginSdk library to support Android S+

- Update the SDK version to the latest
- Added Client_Token for initialization
- Manually initialized FacebookSdk

fix: LEARNER-9199

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -326,8 +326,10 @@
         </receiver>
 
         <!-- Setup Facebook -->
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="${facebookAppId}"/>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="${fbLoginProtocolScheme}"/>
+        <meta-data android:name="com.facebook.sdk.ClientToken" android:value="${fbClientToken}"/>
+        <meta-data android:name="com.facebook.sdk.AutoLogAppEventsEnabled" android:value="false"/>
+        <meta-data android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled" android:value="false"/>
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
