--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -147,7 +147,7 @@ dependencies {
     implementation "androidx.mediarouter:mediarouter:$androidXVersion"
     implementation 'com.google.android.gms:play-services-cast-framework:16.2.0'
 
-    implementation 'com.facebook.android:facebook-login:11.1.1'
+    implementation 'com.facebook.android:facebook-login:15.2.0'
     implementation 'com.microsoft.identity.client:msal:0.3+'
     implementation 'commons-lang:commons-lang:2.6'
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -397,23 +397,24 @@ android {
             }
         }
 
-        def facebookAppId = ""
         def fbLoginProtocolScheme = ""
         def facebook = config.get('FACEBOOK')
+        def fbClientToken = ""
         if (facebook?.get('ENABLED')) {
-            facebookAppId = facebook.get('FACEBOOK_APP_ID')
-            if (null == facebookAppId) {
-                throw new GradleException("You must set FACEBOOK_APP_ID if FACEBOOK is enabled")
+            def facebookAppId = facebook.get('FACEBOOK_APP_ID')
+            fbClientToken = facebook.get('CLIENT_TOKEN')
+            if (null == facebookAppId || null == fbClientToken) {
+                throw new GradleException("You must set FACEBOOK_APP_ID and CLIENT_TOKEN if FACEBOOK is enabled")
             }
-            fbLoginProtocolScheme = "fb"+facebookAppId
+            fbLoginProtocolScheme = "fb" + facebookAppId
         }
 
         manifestPlaceholders = [supportsRtl          : "true",
                                 firebaseEnabled      : firebaseEnabled ?: false,
                                 fcmEnabled           : fcmEnabled,
                                 branchKey            : branchKey,
-                                facebookAppId        : facebookAppId,
                                 microsoftSignature   : microsoftSignature,
+                                fbClientToken        : fbClientToken,
                                 fbLoginProtocolScheme: fbLoginProtocolScheme,
                                 sdCardEnabled        : config.get('DOWNLOAD_TO_SD_CARD_ENABLED') ?: true]
 
