--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -144,8 +144,8 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.16.0'
 
     // Google cast sdk
-    implementation "androidx.mediarouter:mediarouter:$androidXVersion"
-    implementation 'com.google.android.gms:play-services-cast-framework:16.2.0'
+    implementation "androidx.mediarouter:mediarouter:1.3.1"
+    implementation 'com.google.android.gms:play-services-cast-framework:21.2.0'
 
     implementation 'com.facebook.android:facebook-login:15.2.0'
     implementation 'com.microsoft.identity.client:msal:0.3+'
