--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -123,12 +123,6 @@
             android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
 
         <activity
-            android:name="org.edx.mobile.view.AccountActivity"
-            android:label="@string/profile_title"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
-
-        <activity
             android:name="org.edx.mobile.view.PaymentsInfoActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -188,12 +182,12 @@
 
         <activity
             android:name="org.edx.mobile.view.CourseInfoActivity"
-            android:label="@string/label_discovery"
+            android:label="@string/label_discover"
             android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
 
         <activity
             android:name="org.edx.mobile.view.ProgramInfoActivity"
-            android:label="@string/label_discovery"
+            android:label="@string/label_discover"
             android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
 
         <activity
@@ -204,7 +198,7 @@
 
         <activity
             android:name=".view.DiscoveryActivity"
-            android:label="@string/label_discovery"
+            android:label="@string/label_discover"
             android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
 
         <activity
